OCT REM 修复跳转失败问题

--- a/moudle-material/src/main/res/layout/material_activity_main.xml
+++ b/moudle-material/src/main/res/layout/material_activity_main.xml
@@ -3,7 +3,7 @@
 
     <data>
         <variable
-            name="entity"
+            name="viewModel"
             type="com.xyc.moudle_material.ui.MaterialViewModel" />
     </data>
 
